# pdp_util

./: .gitignore  .hgignore  .travis.yml  Jenkinsfile  NEWS.md  Pipfile  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_requirements.txt  tox.ini
.github/workflows/: black.yml  docker-publish.yml  pypi-publish.yml  python-ci.yml
docker/local-pytest/: Dockerfile  README.md  entrypoint.sh
jenkins/: Dockerfile  Jenkinsfile
pdp_util/: __init__.py  agg.py  auth.py  counts.py  dbdict.py  ensemble_members.py  filter_options.py  filter_options.test.py  filters.py  legend.py  map.py  pcds_dispatch.py  pcds_index.py  raster.py  util.py
pdp_util/data/: clim_vars.sql  variables.sql
pdp_util/templates/: map.html  oid_login.html  pcds_index.html
tests/: conftest.py  data.py  manual_test_db_restarts.py  test_agg.py  test_auth.py  test_counts.py  test_dbdict.py  test_ensemble.py  test_filters.py  test_geo.py  test_legend.py  test_map.py  test_orca_stuff.py  test_pcds_dispatch.py  test_pcds_index.py  test_pcic.py  test_raster.py  test_util.py
tests/download-test/: README.md  download.sh
tests/download-test/climatologies/: README.md  run-tests.sh
tests/download-test/timeseries/: README.md  run-tests.sh
