# TODO: Absorb pytest.ini

[tool.poetry]
name = "pdp-util"
version = "2.1.0"
description = "A package supplying numerous apps for running PCIC's data server"
authors = ["James Hiebert <hiebert@uvic.ca>"]
readme = "README.rst"
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/pdp_util"
keywords = ["sql", "database", "opendap", "dods", "dap", "data", "science", "climate", "oceanography", "meteorology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    {include = "pdp_util"},
]
include = [
    "pdp_util/data/alpha.png",
    "pdp_util/data/*.css",
    "pdp_util/templates/*.html",
]

[[tool.poetry.source]]
name = "pcic-pypi"
url = "https://pypi.pacificclimate.org/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.8"
# TODO: Updgrade and loosen version specs
# TODO: Can we specify only a subset of these deps? Some may be subdeps.
alembic = "==1.3"
pycds = { version = "==2.2.1",  source = "pcic-pypi" }
modelmeta = { version = "==0.3.0",  source = "pcic-pypi" }
numpy = "==1.16.0"
pydap-extras = { version = "==0.1.1",  source = "pcic-pypi" }
python-dateutil = "==2.7.5"
pytz = "==2018.9"
simplejson = "==3.16.0"
psycopg2 = "*"
SQLAlchemy = "==1.2.16"
Beaker = "==1.10.0"
Genshi = "==0.7.5"
Paste = "==3.0.6"
Pillow = "==5.4.1"
PyYAML = "==3.13"
WebOb = "==1.8.7"
Pydap = "==3.2.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=4.1.1"
beautifulsoup4 = "*"
"testing.postgresql" = "*"
black = "==20.8b1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
