# TODO: Absorb pytest.ini

[tool.poetry]
name = "pdp-util"
version = "2.1.0"
description = "A package supplying numerous apps for running PCIC's data server"
authors = ["James Hiebert <hiebert@uvic.ca>"]
readme = "README.rst"
homepage = "http://www.pacificclimate.org/"
repository = "https://github.com/pacificclimate/pdp_util"
keywords = ["sql", "database", "opendap", "dods", "dap", "data", "science", "climate", "oceanography", "meteorology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    {include = "pdp_util"},
]
include = [
    "pdp_util/data/alpha.png",
    "pdp_util/data/*.css",
    "pdp_util/templates/*.html",
]

[[tool.poetry.source]]
name = "pcic-pypi"
url = "https://pypi.pacificclimate.org/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.8"
# TODO: Updgrade and loosen version specs
pycds = { version = "^4.4.0",  source = "pcic-pypi" }
modelmeta = { version = "^1.0.1",  source = "pcic-pypi" }
pydap-extras = { version = "0.1.1",  source = "pcic-pypi" }
Pydap = "3.2.2"
SQLAlchemy = "^1.4"
pytz = "2018.9"
simplejson = "3.16.0"
Beaker = "1.10.0"
Genshi = "0.7.5"
Paste = "3.0.6"
Pillow = "5.4.1"
WebOb = "1.8.7"
setuptools = "^69.0.2"

[tool.poetry.group.test.dependencies]
pytest = ">=4.1.1"
"testing.postgresql" = "*"

[tool.poetry.group.black.dependencies]
black = "23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
